--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">SMS Bomber</string>
 
     <string name="read_file_error">Error Reading Excel File…</string>
+    <string name="empty_file_error">No Entities Available</string>
 </resources>
